NOISSUE by Michelle: Switched order of links div and search div to line them up better on the main forums page.
#509716 by Michelle, merlinofchaos: Fixed problem with views not getting style applied.
#497450 by Michelle: Made translated images work. Moved all images into new directories.
NOISSUE by Michelle: Cleaned up the id/class printing on post template.

July 3, 2009
------------
#497450 by Michelle: More fixes for link lists including some renaming and repositioning.
#497450 by Michelle: Removed setting options for images since this is all handled via# CSS now.

July 1, 2009
------------
#497450 by Michelle: Changed to a better image replacement technique that works if images are disabled.

June 25, 2009
-------------
#497450 by Michelle: reply, edit, delete node links now working.
#501616 by Michelle, neclimlap: Stripped the tags from the teaser for the title popup.
#501616 by Michelle, neclimlap, merlinofchaos: More fixes for the title popup.
#501616 by merlinofchaos, Michelle: Changed over to doing the whole popup in the view. Left old way in as an alternate.
#502370 by neclimdul: E-ALL fixes.
#470202 by tom_o_t, merlinofchaos: Changed mark all read to look at node changed instead of node created to fix weird edge cases.

June 24, 2009
-------------
NOISSUE by merlinofchaos: Made blue lagoon pager smaller and italic.
#500978 by Michelle: Got topic list icons working. The reports of their functionality have been greatly exaggerated.
NOISSUE by Michelle: Put the functions in theme.inc into a more logical order so I can find things.
#497450 by Michelle: Changed how forum links are handled. Split core links and added links into two and removed theme_links from reply button.
#497450 by Michelle: More work on the image replacement. Node links are still not right.

June 23, 2009
-------------
#497450 by Michelle: Images on the forum list page converted to CSS.
#497450 by Michelle: Topic list page images converted.

June 22, 2009
-------------